ci: Even more workflow fixing (#748)

--- a/.github/workflows/release_dev.yml
+++ b/.github/workflows/release_dev.yml
@@ -41,22 +41,14 @@ jobs:
             echo "needed=true" >> $GITHUB_OUTPUT
           fi
 
-  gamemaker_build:
-    name: Build
-    uses: ./.github/workflows/gamemaker_build.yml
-    secrets: inherit
-    needs: build_needed
-    if: needs.build_needed.outputs.needed == 'true'
-    with:
-      yyc: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.compiler == 'YYC' || github.event_name != 'workflow_dispatch' }}
-
   prepare_release:
     name: Prepare the tags
     runs-on: ubuntu-latest
-    needs: gamemaker_build
+    needs: build_needed
     if: needs.build_needed.outputs.needed == 'true'
     outputs:
       tag_name: ${{ steps.tag_info.outputs.tag_name }}
+      build_date: ${{ steps.tag_info.outputs.build_date }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -66,18 +58,24 @@ jobs:
         id: tag_info
         run: |
           BRANCH_SUFFIX="${GITHUB_REF_NAME##*/}"
-          DATE_TAG=$(date -u +"%y-%m-%d-%H-%M")
+          DATE_TAG=$(date -u +"%y-%m-%d-%H%M")
           TAG_NAME="$BRANCH_SUFFIX/$DATE_TAG"
+
+          echo "Resolved DATE_TAG=$DATE_TAG"
+          echo "Resolved BRANCH_SUFFIX=$BRANCH_SUFFIX"
+          echo "Resolved TAG_NAME=$TAG_NAME"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          echo "build_date=$DATE_TAG" >> $GITHUB_OUTPUT
 
       - name: Cleanup old releases
         run: |
-          BRANCH_SUFFIX="${{ steps.tag_info.outputs.tag_name%%/* }}"
+          # tag_name looks like: branch-name/date
+          TAG_NAME="${{ steps.tag_info.outputs.tag_name }}"
+          BRANCH_SUFFIX="${TAG_NAME%%/*}"
           PREFIX="${BRANCH_SUFFIX}/"
       
           echo "Checking releases with prefix: $PREFIX"
       
-          # List matching tags/releases and sort newest first
           TAGS=$(gh release list --limit 100 | awk '{print $1}' | grep "^${PREFIX}" | sort -r)
       
           COUNT=0
@@ -91,10 +89,26 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Debug tag and commit 2
+        run: |
+          echo "Tag name: ${{ steps.tag_info.outputs.tag_name }}"
+          echo "Target commitish: ${{ github.ref_name }}"
+          git rev-parse ${{ github.ref_name }} || echo "Commit not resolved"
+
+  gamemaker_build:
+    name: Build
+    uses: ./.github/workflows/gamemaker_build.yml
+    secrets: inherit
+    needs: [prepare_release, build_needed]
+    if: needs.build_needed.outputs.needed == 'true'
+    with:
+      yyc: ${{ github.event.inputs.compiler == 'YYC' }}
+      build_date: ${{ needs.prepare_release.outputs.build_date }}
+
   release:
     name: Release
     runs-on: windows-2022
-    needs: [gamemaker_build, prepare_release]
+    needs: [prepare_release, gamemaker_build]
     if: needs.build_needed.outputs.needed == 'true'
     steps:
       - uses: actions/checkout@v4
@@ -110,9 +124,9 @@ jobs:
 
       - id: create_release
         name: Create a release and upload the build
-        uses: softprops/action-gh-release@v2.0.9
+        uses: softprops/action-gh-release@v2.2.2
         with:
-          name: ChapterMaster ${{ needs.gamemaker_build.outputs.suffix }}
+          name: ChapterMaster ${{ needs.prepare_release.outputs.tag_name }}
           tag_name: ${{ needs.prepare_release.outputs.tag_name }}
           prerelease: true
           generate_release_notes: true
